--- a/Frontend/edziennik/src/app/login/login.component.html
+++ b/Frontend/edziennik/src/app/login/login.component.html
@@ -1,33 +1,21 @@
-
-<div class="py-5">
-  <div class="row">
-    <div class="col-md-6 mx-auto">
-      <span class="anchor" id="formLogin"></span>
-
-      <!-- form card login -->
       <div class="card rounded-0">
         <div class="card-header">
-          <h3 class="mb-0">Login</h3>
+          <h3 class="mb-0">Zaloguj się</h3>
         </div>
         <div class="card-body">
           <form class="form">
             <div class="form-group">
-              <label for="uname1">Username</label>
-              <input type="text" class="form-control rounded-0"  name="email" required>
+              <label for="uname1">Nazwa użytkownika</label>
+              <input type="text" class="form-control rounded-0" [(ngModel)]="loginUserData.login" name="login" required>
             </div>
             <div class="form-group">
-              <label>Password</label>
-              <input type="password" class="form-control rounded-0" name="password" required>
+              <label>Hasło</label>
+              <input type="password" [(ngModel)]="loginUserData.password" class="form-control rounded-0" name="password" required>
             </div>
-            <button type="button"  class="btn btn-success float-right">Login</button>
+            <button type="button" (click)="loginUser()" class="btn btn-success float-right">Zaloguj się</button>
           </form>
         </div>
-        <!--/card-block-->
       </div>
-      <!-- /form card login -->
-
-    </div>
 
 
-  </div>
-</div>
+
