--- a/Frontend/edziennik/src/app/navbar/navbar.component.html
+++ b/Frontend/edziennik/src/app/navbar/navbar.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
   <a class="navbar-brand" href="#">E-dziennik</a>
 </nav>
