--- a/Frontend/edziennik/src/styles.css
+++ b/Frontend/edziennik/src/styles.css
@@ -1,16 +1,36 @@
 body {
-  height: 100%;
-  background-image: url(assets/background.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    -moz-background-size: 100% 100%;
+  height: 100vh;
+  background-image: url(assets/background2.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  font-family: "DM Mono", monospace;
 }
 
+app-navbar {
+  font-family: "Anton", sans-serif;
+}
 app-footer {
-  width: 100%;
+  width: 100vw;
   text-align: center;
   position: fixed;
+  padding: 1vh;
   bottom: 0;
-  padding: 1%;
+  font-family: "DM Mono", monospace;
   background-color: rgb(73, 73, 78);
+}
+
+app-login {
+  margin: 0 !important;
+  position: absolute;
+  width: 38vw;
+  top: 25vh;
+  left: 31vw;
+  font-family: "DM Mono", monospace;
+}
+
+app-students {
+  position: absolute;
+  top: 25vh;
+  left: 31vw;
 }
