logout, studentProfil, server logic, better design

--- a/Frontend/edziennik/src/app/navbar/navbar.component.html
+++ b/Frontend/edziennik/src/app/navbar/navbar.component.html
@@ -1,3 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-  <a class="navbar-brand" href="#">E-dziennik</a>
+  <a class="navbar-brand" >E-dziennik</a>
+  <ng-container *ngIf="service.loggedIn()">
+  <button class="btn" (click)="logoutUser()">Wyloguj się!</button>
+  </ng-container>
 </nav>
