--- a/Frontend/edziennik/src/app/students/students.component.css
+++ b/Frontend/edziennik/src/app/students/students.component.css
@@ -14,8 +14,9 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
   -moz-background-size: 100% 100%;
-  transform: scale(1.3);
   margin-left: 0.5vw;
+  position: relative;
+  top: 0;
 }
 
 .btn:hover {
@@ -52,3 +53,8 @@ span{
   display: inline-block;
 }
 
+.welcome {
+  text-align: center ;
+  padding-bottom: 3vh;
+  font-size: 40px;
+}
