--- a/Frontend/edziennik/src/app/students/students.component.html
+++ b/Frontend/edziennik/src/app/students/students.component.html
@@ -21,16 +21,18 @@
           <td class="inputs" [hidden]="isVisible[nr]">
             <span>Ocena: </span><textarea [(ngModel)]="value[nr]"></textarea>
             <span>Temat: </span><textarea [(ngModel)]="for[nr]" class="wider"></textarea>
+
             <div (click)="saveRating(student.login, nr)" class="btn btn-success">
               Zapisz
             </div>
+            <div class = "invalidData">{{invalidRating}}</div>
           </td>
           <th scope="row">{{ nr + 1 }}</th>
           <td>{{ student.name }}</td>
           <td>{{ student.surname }}</td>
-          <ng-container *ngFor="let value of student.ratings">
-            <td [for]="value.for" [date]="value.date" [idRating]="value._id" [login]="student.login" appShowRating>
-              {{ value.value }}
+          <ng-container *ngFor="let rating of student.ratings">
+            <td [for]="rating.for" [date]="rating.date" [idRating]="rating._id" [login]="student.login" appShowRating>
+              {{ rating.value }}
             </td>
           </ng-container>
         </tr>
