--- a/Frontend/edziennik/src/app/navbar/navbar.component.html
+++ b/Frontend/edziennik/src/app/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-  <a class="navbar-brand" >E-dziennik</a>
-  <ng-container *ngIf="service.loggedIn()">
-  <button class="btn" (click)="logoutUser()">Wyloguj się!</button>
-  </ng-container>
+    <a class="navbar-brand">E-dziennik</a>
+    <ng-container *ngIf="service.loggedIn()">
+        <div class="logoutAndTimer">
+            <div class="timer" [innerHTML]="time"></div>
+            <div class="logout" (click)="logoutUser()">Wyloguj się!</div>
+        </div>
+    </ng-container>
 </nav>
