--- a/Frontend/edziennik/src/app/students/students.component.html
+++ b/Frontend/edziennik/src/app/students/students.component.html
@@ -19,13 +19,17 @@
                         <div (click)="addRating(nr)" class="btn add"></div>
                     </div>
                     <td class="inputs" [hidden]="isVisible[nr]">
-                        <span>Ocena: </span><textarea [(ngModel)]="value[nr]"></textarea>
-                        <span>Temat: </span><textarea [(ngModel)]="for[nr]" class="wider"></textarea>
+                        <div>
+                            <span>Ocena: </span><input type="text" [(ngModel)]="value[nr]" class="input" />
+                        </div>
+                        <div>
+                            <span>Temat: </span><input type="text" [(ngModel)]="for[nr]" class="input wider" />
+                        </div>
 
                         <div (click)="saveRating(student.login, nr)" class="btn btn-success save">
                             Zapisz
                         </div>
-                        <div class="invalidData">{{invalidRating[nr]}}</div>
+                        <div class="invalidData">{{ invalidRating[nr] }}</div>
                     </td>
                     <th scope="row">{{ nr + 1 }}</th>
                     <td>{{ student.name }}</td>
