--- a/Frontend/edziennik/src/app/profile-student/profile-student.component.css
+++ b/Frontend/edziennik/src/app/profile-student/profile-student.component.css
@@ -8,6 +8,11 @@
     text-align: center;
 }
 
+.spinner-border {
+    position: relative;
+    left: 50%;
+}
+
 @media (max-width: 800px) {
     .welcome {
         font-size: 5vw;
