--- a/Frontend/edziennik/src/app/students/students.component.css
+++ b/Frontend/edziennik/src/app/students/students.component.css
@@ -23,6 +23,11 @@
     transform: scale(0.9);
 }
 
+.spinner-border {
+    position: relative;
+    left: 50%;
+}
+
 input {
     line-height: 1.5;
     border-radius: 5px;
